#                                               -*- cmake -*-

install (FILES
          ValidSolveLinearSystemRect.sce
          AbdoRackwitz.txt
          Cas1_eads.txt
          Cas1.txt
          Cas2.txt
          Cas3_eads.txt
          Cas4.txt
          Cas5.txt
          Cas6.txt
          Cas7_eads.txt
          CoefficientOfVariation.txt
          Curvature.txt
          Debye.txt
          DefaultDistribution.txt
          DirectionalSampling.txt
          dProb.txt
          equality_constrained_quadratic_quadratic.txt
          GeneralizedNataf.txt
          IntegrationND.txt
          InverseErf.txt
          lambda_U.txt
          LambertW.txt
          NonCentralStudent.txt
          PSORM.txt
          qnorm.txt
          Sensibilite_ref1.txt
          Sensibilite_ref2.txt
          Sensibilite_ref3.txt
          SensibiliteValidBeta.txt
          SinhTanh.txt
          Student2D.txt
          ti.txt
          truncnorm.txt
          ValidAbdoMixture.txt
          ValidAndersonDarling.txt
          ValidBeta.txt
          ValidBoundConstrainedAlgoithm.txt
          ValidChiSquare.txt
          ValidClaytonCopula.txt
          ValidConditionalArchimedean.txt
          ValidCovarianceAlgorithm.txt
          ValidCovarianceGauss.txt
          ValidCovarianceMatrixLapack.sce
          ValidCovariance.txt
          ValidCramerVonMises.txt
          ValidDiff.txt
          ValidDistFunc.txt
          ValidDistribution.txt
          ValidElliptical.txt
          validElliptical.sce
          validEnumerate.txt
          ValidEpanechnikov.txt
          ValidEstimatedTruncatedNormal.txt
          ValidEstimateLogistic.txt
          ValidEstimate.txt
          ValidExponential.txt
          ValidFORMKernelMixture.txt
          ValidFrankCopula.txt
          ValidGammaEstimate.txt
          ValidGamma.txt
          ValidGeometric.txt
          ValidGumbelCopula.txt
          ValidGumbelEstimate.txt
          ValidGumbel.txt
          ValidHisto.txt
          ValidIndependentCopula.txt
          ValidInverseIsoprobabilisticTransformationEllipticalCopula.txt
          ValidInverseNatafCopula2.txt
          ValidInverseNatafCopula.txt
          ValidIsoProbabilisicTransformationEllipticalCopula.txt
          ValidLeastSquareAlgorithm.txt
          ValidLinearCombination.txt
          ValidLaplace.txt
          ValidLogistic.txt
          ValidLogNormal.txt
          ValidMultiNomial.txt
          ValidMultiStudent.txt
          ValidNatafEllipticalcopula.txt
          ValidNormal1.txt
          ValidNormalCopula.txt
          ValidNumericalSample.R
          ValidOrthogonalProductFactory.txt
          ValidOrthogonalUniVariateFactory.txt
          ValidPoisson.txt
          ValidPoutreArticle.txt
          ValidProductFunction.txt
          ValidSampleComputation.sce
          ValidQuadraticFunction.txt
          ValidQuadraticTaylor.txt
          ValidRayleigh.txt
          valid_SORM.txt
          ValidSpecFunc.txt
          ValidStudentEstimate.txt
          ValidStudent.txt
          ValidTriangular.txt
          ValidTruncatedNormalFactory.txt
          ValidTruncatedNormal.txt
          ValidUniform.txt
          ValidUniVariatePolynomial.txt
          ValidWeibull.txt
          ValidWilks.txt
          Variance.txt
          Weibull_moment.txt
          ziggurat_exponential.txt
          ziggurat_exponential.mws
          ziggurat_normal.txt
          ziggurat_normal.mws
          ValidZipfMandelbrot.mw
          DESTINATION ${OPENTURNS_VALIDATION_PATH}
       )
          
